// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increase a counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should show a component with a child 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Hellow world
  </h1>
</div>
`;
